# OccamTools

./: .coveragerc  .gitignore  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
data/: example_2_fort.1  example_3_fort.1  example_fort.1  example_fort.3  example_fort.5  example_velocities_fort.8  fort.7  fort.8
occamtools/: __init__.py  compute_gr.py  generate_fort5.py  histogram.py  occam_data.py  read_fort1.py  read_fort7.py  read_xyz.py  replace_in_fort1.py  replace_in_fort3.py  xyz_to_fort5.py
src/: fort5_to_xyz.py  generate_fort5.py  read_fort1.py  read_fort7.py  xyz_to_fort5.py
test/: test_compute_gr.py  test_fort5_to_xyz.py  test_generate_fort5.py  test_histogram.py  test_occam_data.py  test_read_fort1.py  test_read_fort7.py  test_read_xyz.py  test_replace_in_fort1.py  test_replace_in_fort3.py  test_xyz_to_fort5.py
