[metadata]
name = occamtools
description = Analysis and synthesis tools for OCCAM hPF simulations
author = Morten Ledum
author-email = morten.ledum@gmail.com
license = GPL-3
url = https://github.com/mortele/OccamTools
long-description = file: README.md
long-description-content-type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Development Status :: 3 - Alpha
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7

[options.packages.find]
where = occamtools
exclude =
  test
