[metadata]
name = occamtools
description = Analysis and synthesis tools for OCCAM hPF simulations
author = Morten Ledum
author-email = morten.ledum@gmail.com
license = GPL-3
url = https://github.com/mortele/OccamTools
long-description = file: README.md
long-description-content-type = text/markdown
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options.packages.find]
where = occamtools
exclude =
  test
